# tensorflow-cmake

./: .gitignore  README.md
example/: CMakeLists.txt  example_trainer.cc
example/cmake/Modules/: Protobuf_VERSION.cmake
